--- a/index.html
+++ b/index.html
@@ -78,17 +78,23 @@
                         </div>
                     </dd>
                     <dd>
-                        <div class="skill-name">PHP</div>
+                        <div class="skill-name">React</div>
                         <div class="skill-bar-wrap">
                             <div class="skill-bar" style="width: 60%"></div>
                         </div>
                     </dd>
-                    <!-- <dd>
-                        <div class="skill-name">Java</div>
+                    <dd>
+                        <div class="skill-name">VUE</div>
                         <div class="skill-bar-wrap">
                             <div class="skill-bar" style="width: 65%"></div>
                         </div>
-                    </dd> -->
+                    </dd>
+                    <dd>
+                        <div class="skill-name">node.js</div>
+                        <div class="skill-bar-wrap">
+                            <div class="skill-bar" style="width: 60%"></div>
+                        </div>
+                    </dd>
                 </li>
             </ul>
             <div class="note">
