--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                     <dd><i class="icon-mail-alt"></i>邮箱: <a href="mailto:dashu9204@hotmail.com" target="_blank">dashu9204@hotmail.com</a></dd>
                     <dd><i class="icon-wechat"></i>微信: love_da_shu</dd>
                     <dd><i class="icon-qq"></i>QQ: <a href="http://wpa.qq.com/msgrd?v=3&uin=306578968&site=qq&menu=yes" target="_blank">1801278075</a></dd>
+                    <dd><i class="icon-qq"></i>电话: <a href="#" target="_blank">18655664310</a></dd>
                 </li>
                 <li class="someRight">
                     <dt><i class="icon-bookmark"></i>Application. 应聘岗位</dt>
