--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                             <p>使用 Html css javascript制作页面，完成页面的静态布局和交互效果。</p>
                             <p>与后端、UI协同合作，实现工作要求。</p>
                             <p>页面移动端的适配等。</p>
-                            <img src="img/abinbev.png">
+                            <img src="img/texcel.png">
                         </li>
                     </ul>
                     <h3>去哪儿网(合肥)前端 (2015.6 - 2016.04)</h3>
@@ -134,8 +134,8 @@
                             <div class="circle"></div>
                             <h4>
                                 MusicPlayer（2016.4）
-                                <a href="https://github.com/wushubing" target="_blank"><i class="icon-link"></i>源代码</a>
-                                <a href="https://www.wushubing.top" target="_blank"><i class="icon-link"></i>Demo</a>
+                                <a href="https://github.com/wushubing/music-player" target="_blank"><i class="icon-link"></i>源代码</a>
+                                <a href="https://wushubing.github.io/music-player/" target="_blank"><i class="icon-link"></i>Demo</a>
                             </h4>
                             <p>纯原生js制做音乐播放器，功能完善，特效精仿网易云音乐，这是我自学原生js入门后的一个作品。</p>
                             <img src="img/wangyiyun.png">
@@ -144,7 +144,7 @@
                             <div class="circle"></div>
                             <h4>
                                 dashu的个人网站（2016.2 - 至今）
-                                <a href="https://github.com/wushubing/wushubing.github.io" target="_blank"><i class="icon-link"></i>源代码</a>
+                                <a href="https://github.com/wushubing/resume" target="_blank"><i class="icon-link"></i>源代码</a>
                                 <a href="https://www.wushubing.top" target="_blank"><i class="icon-link"></i>Demo</a>
                             </h4>
                             <p>基于Jekyll制作，使用github提供的免费主机搭建。</p>
